@@ -8,6 +8,12 @@
      [key.c]
      add key length to visual fingerprint; zap magical constants;
      ok grunk@ djm@
+   - djm@cvs.openbsd.org 2008/06/26 06:10:09
+     [sftp-client.c sftp-server.c]
+     allow the sftp chmod(2)-equivalent operation to set set[ug]id/sticky
+     bits. Note that this only affects explicit setting of modes (e.g. via
+     sftp(1)'s chmod command) and not file transfers. (bz#1310)
+     ok deraadt@ at c2k8
 
 20080628
  - (djm) [RFC.nroff contrib/cygwin/Makefile contrib/suse/openssh.spec]
@@ -4428,4 +4434,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5026 2008/06/29 12:45:37 djm Exp $
+$Id: ChangeLog,v 1.5027 2008/06/29 12:46:35 djm Exp $
